Added lark grammar file and examples

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,15 +21,10 @@ project_urls =
 [options]
 package_dir = src
 packages = find:
-install_requires =
-    parrotfish
-dependency_links =
-    git+ssh://git@bitbucket.org/tndev/parrotfish.git#egg=parrotfish-0.1.0
 python_requires = >=3.7
 tests_requires =
     pytest
     hypothesis
-    pytest-asyncio
 
 [options.packages.find]
 where=src
@@ -46,6 +41,7 @@ documentaton =
 
 development =
     pre-commit
+    lark-parser
 
 
 [yapf]
