--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = roll-with-it
 version = 0.0.1
 description  =  A dice roller interface and library built in python.
-url = <REPO_URL>
+url = https://github.com/russels-crockpot/roll-with-it
 author = Brendan McGloin
 author_email = russels_dash_crockpot-at-gmail
 classifiers =
@@ -15,8 +15,8 @@ classifiers =
     Topic :: Software Development :: Libraries
     Topic :: Software Development :: Libraries :: Python Modules
 project_urls =
-    Bug Tracker = https://bitbucket.org/tndev/roll-with-it/issues?status=new&status=open
-    Source Code = https://bitbucket.org/tndev/roll-with-it/src
+    Bug Tracker = https://github.com/russels-crockpot/roll-with-it/issues
+    Source Code = https://github.com/russels-crockpot/roll-with-it
 
 [options]
 package_dir = src
@@ -30,6 +30,8 @@ tests_requires =
 where=src
 
 [options.extra_requires]
+cli =
+    prompt_toolkit
 documentaton =
     chios
     sphinx
