--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = roll-with-it
+ame = roll-with-it
 version = 0.0.1
 description  =  A dice roller interface and library built in python.
 url = https://github.com/russels-crockpot/roll-with-it
@@ -31,7 +31,9 @@ where=src
 
 [options.extra_requires]
 cli =
+    click
     prompt_toolkit
+
 documentaton =
     chios
     sphinx
