--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
-ame = roll-with-it
+ame = rollit
 version = 0.0.1
 description  =  A dice roller interface and library built in python.
-url = https://github.com/russels-crockpot/roll-with-it
+url = https://github.com/russels-crockpot/rollit
 author = Brendan McGloin
 author_email = russels_dash_crockpot-at-gmail
 classifiers =
@@ -15,8 +15,8 @@ classifiers =
     Topic :: Software Development :: Libraries
     Topic :: Software Development :: Libraries :: Python Modules
 project_urls =
-    Bug Tracker = https://github.com/russels-crockpot/roll-with-it/issues
-    Source Code = https://github.com/russels-crockpot/roll-with-it
+    Bug Tracker = https://github.com/russels-crockpot/rollit/issues
+    Source Code = https://github.com/russels-crockpot/rollit
 
 [options]
 package_dir = src
@@ -93,7 +93,7 @@ split_complex_comprehension = true
 use_tabs = false
 
 [build_sphinx]
-project = roll-with-it
+project = rollit
 version = 0.0.1
 release = 0.0.1
 source-dir = doc
