Switched to TatSu

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,8 @@ project_urls =
 package_dir = src
 packages = find:
 python_requires = >=3.7
+install_requires =
+    tatsu
 tests_requires =
     pytest
     hypothesis
@@ -45,7 +47,6 @@ documentaton =
 
 development =
     pre-commit
-    lark-parser
 
 
 [yapf]
